// RAPID Repair System — import into dbdiagram.io, dbdocs, or any DBML data modeler
Project rapid {
  database_type: "MySQL"
  Note: "RAPID device repair schema"
}

Table users {
  id int [pk, increment, note: "Unique ID of the user."]
  role varchar [not null, note: "Role of the user in the RAPID system."]
  first_name varchar(100) [not null, note: "First name of the user."]
  last_name varchar(100) [not null, note: "Last name of the user."]
  email varchar(190) [unique, not null, note: "Email address used to log in."]
  phone varchar(30) [note: "Contact number of the user."]
  password varchar(255) [not null, note: "Hashed password of the user."]
  status varchar [not null, note: "Account status of the user."]
  created_at datetime [not null, note: "Date and time the user was created."]
  updated_at datetime [not null, note: "Date and time the user was last updated."]
  Note: 'Login accounts for administrators, technicians, and customers.'
}

Table customers {
  id int [pk, increment, note: "Unique ID of the customer."]
  user_id int [unique, not null, note: "Linked user account of the customer."]
  address text [note: "Address of the customer."]
  created_at datetime [not null, note: "Date and time the customer was created."]
  updated_at datetime [not null, note: "Date and time the customer was last updated."]
  Note: 'Customer profile linked to a user account.'
}

Table technicians {
  id int [pk, increment, note: "Unique ID of the technician."]
  user_id int [unique, not null, note: "Linked user account of the technician."]
  specialization varchar(150) [note: "Repair specialization of the technician."]
  availability_status varchar [not null, note: "Current availability of the technician."]
  created_at datetime [not null, note: "Date and time the technician was created."]
  updated_at datetime [not null, note: "Date and time the technician was last updated."]
  Note: 'Technician profile linked to a user account.'
}

Table devices {
  id int [pk, increment, note: "Unique ID of the device."]
  customer_id int [not null, note: "Owner of the device."]
  device_type varchar(100) [not null, note: "Type of the device."]
  brand varchar(100) [not null, note: "Brand of the device."]
  model varchar(150) [not null, note: "Model of the device."]
  serial_number varchar(150) [note: "Serial number of the device."]
  imei varchar(50) [note: "IMEI of the device."]
  color varchar(50) [note: "Color of the device."]
  accessories text [note: "Accessories received with the device."]
  physical_condition text [note: "Physical condition of the device."]
  created_at datetime [not null, note: "Date and time the device was created."]
  updated_at datetime [not null, note: "Date and time the device was last updated."]
  Note: 'Customer devices submitted for repair.'
}

Table repair_tickets {
  id int [pk, increment, note: "Unique ID of the repair ticket."]
  ticket_number varchar(30) [unique, not null, note: "Public tracking number of the ticket."]
  customer_id int [not null, note: "Customer who requested the repair."]
  device_id int [not null, note: "Device attached to the ticket."]
  assigned_technician_id int [note: "Technician assigned to the ticket."]
  problem_description text [not null, note: "Reported problem of the device."]
  current_status varchar [not null, note: "Current repair status of the ticket (booking_submitted, received, diagnosing, quotation_pending, awaiting_approval, approved, repairing, ready_for_pickup, completed, declined, cancelled)."]
  priority varchar [not null, note: "Priority level of the ticket."]
  appointment_date datetime [note: "Scheduled appointment date of the ticket."]
  received_at datetime [note: "Date and time the device was received."]
  completed_at datetime [note: "Date and time the repair was completed."]
  estimated_completion datetime [note: "Estimated completion date of the repair."]
  created_at datetime [not null, note: "Date and time the ticket was created."]
  updated_at datetime [not null, note: "Date and time the ticket was last updated."]
  Note: 'Central repair job record for a customer device.'
}

Table device_media {
  id int [pk, increment, note: "Unique ID of the media file."]
  ticket_id int [not null, note: "Repair ticket of the media file."]
  uploaded_by int [not null, note: "User who uploaded the media file."]
  file_name varchar(255) [not null, note: "Original file name of the media."]
  file_path varchar(500) [not null, note: "Stored path of the media file."]
  file_type varchar(100) [not null, note: "MIME type of the media file."]
  media_category varchar [not null, note: "Stage of the repair when the media was taken."]
  uploaded_at datetime [not null, note: "Date and time the media was uploaded."]
  Note: 'Photos and files attached to a repair ticket.'
}

Table diagnoses {
  id int [pk, increment, note: "Unique ID of the diagnosis."]
  ticket_id int [not null, note: "Repair ticket of the diagnosis."]
  technician_id int [not null, note: "Technician who recorded the diagnosis."]
  diagnosis text [not null, note: "Diagnosis findings of the device."]
  recommended_action text [note: "Recommended repair action."]
  estimated_completion datetime [note: "Estimated completion after diagnosis."]
  created_at datetime [not null, note: "Date and time the diagnosis was created."]
  updated_at datetime [not null, note: "Date and time the diagnosis was last updated."]
  Note: 'Technician diagnosis recorded for a repair ticket.'
}

Table ai_suggestions {
  id int [pk, increment, note: "Unique ID of the AI suggestion."]
  ticket_id int [not null, note: "Repair ticket of the AI suggestion."]
  kind varchar(40) [not null, note: "Type of AI suggestion stored."]
  context_hash char(64) [not null, note: "Hash of the ticket context used for cache."]
  payload_json text [not null, note: "JSON payload of the AI suggestion."]
  created_at datetime [not null, note: "Date and time the suggestion was created."]
  updated_at datetime [not null, note: "Date and time the suggestion was last updated."]
  Note: 'Cached AI helper output for a repair ticket.'
}

Table quotations {
  id int [pk, increment, note: "Unique ID of the quotation."]
  ticket_id int [not null, note: "Repair ticket of the quotation."]
  technician_id int [not null, note: "Technician who prepared the quotation."]
  labor_cost decimal(10,2) [not null, note: "Labor cost of the repair."]
  parts_cost decimal(10,2) [not null, note: "Parts cost of the repair."]
  other_cost decimal(10,2) [not null, note: "Other cost of the repair."]
  total_amount decimal(10,2) [not null, note: "Total amount of the quotation."]
  notes text [note: "Additional notes of the quotation."]
  status varchar [not null, note: "Approval status of the quotation."]
  valid_until date [note: "Expiry date of the quotation."]
  created_at datetime [not null, note: "Date and time the quotation was created."]
  updated_at datetime [not null, note: "Date and time the quotation was last updated."]
  Note: 'Repair cost quotation for a ticket.'
}

Table repair_status_history {
  id int [pk, increment, note: "Unique ID of the status history record."]
  ticket_id int [not null, note: "Repair ticket of the status change."]
  status varchar [not null, note: "Status value recorded in the timeline (same values as repair_tickets.current_status)."]
  remarks text [note: "Remarks of the status change."]
  updated_by int [note: "User who recorded the status change."]
  created_at datetime [not null, note: "Date and time the status was recorded."]
  Note: 'Timeline of status changes for a repair ticket.'
}

Table warranties {
  id int [pk, increment, note: "Unique ID of the warranty."]
  ticket_id int [unique, not null, note: "Completed repair ticket of the warranty."]
  warranty_start date [not null, note: "Start date of the warranty."]
  warranty_end date [not null, note: "End date of the warranty."]
  warranty_days int [not null, note: "Coverage length of the warranty in days."]
  warranty_status varchar [not null, note: "Current status of the warranty."]
  created_at datetime [not null, note: "Date and time the warranty was created."]
  updated_at datetime [not null, note: "Date and time the warranty was last updated."]
  Note: 'Warranty coverage issued after a completed repair.'
}

Table warranty_claims {
  id int [pk, increment, note: "Unique ID of the warranty claim."]
  original_ticket_id int [not null, note: "Original repair ticket of the claim."]
  customer_id int [not null, note: "Customer who filed the claim."]
  device_id int [not null, note: "Device covered by the claim."]
  issue_description text [not null, note: "Reported issue of the warranty claim."]
  claim_status varchar [not null, note: "Current status of the warranty claim."]
  technician_id int [note: "Technician assigned to the claim."]
  resolution text [note: "Resolution notes of the claim."]
  created_at datetime [not null, note: "Date and time the claim was created."]
  updated_at datetime [not null, note: "Date and time the claim was last updated."]
  Note: 'Warranty claim filed against a previous repair.'
}

Table notifications {
  id int [pk, increment, note: "Unique ID of the notification."]
  user_id int [not null, note: "User who receives the notification."]
  ticket_id int [note: "Related repair ticket of the notification."]
  title varchar(200) [not null, note: "Title of the notification."]
  message text [not null, note: "Message of the notification."]
  is_read boolean [not null, note: "Read flag of the notification."]
  created_at datetime [not null, note: "Date and time the notification was created."]
  Note: 'In-app notifications sent to users.'
}

Table activity_logs {
  id int [pk, increment, note: "Unique ID of the activity log."]
  user_id int [note: "User who performed the action."]
  action varchar(100) [not null, note: "Action name of the log."]
  description text [note: "Details of the activity."]
  ip_address varchar(45) [note: "IP address of the activity."]
  created_at datetime [not null, note: "Date and time the activity was recorded."]
  Note: 'Audit trail of user and system actions.'
}

Table system_settings {
  id int [pk, increment, note: "Unique ID of the setting."]
  setting_key varchar(100) [unique, not null, note: "Key name of the setting."]
  setting_value text [note: "Value of the setting."]
  updated_at datetime [not null, note: "Date and time the setting was last updated."]
  Note: 'Key-value configuration of the RAPID system.'
}

Ref: customers.user_id - users.id
Ref: technicians.user_id - users.id
Ref: devices.customer_id > customers.id
Ref: repair_tickets.customer_id > customers.id
Ref: repair_tickets.device_id > devices.id
Ref: repair_tickets.assigned_technician_id > technicians.id
Ref: device_media.ticket_id > repair_tickets.id
Ref: device_media.uploaded_by > users.id
Ref: diagnoses.ticket_id > repair_tickets.id
Ref: diagnoses.technician_id > technicians.id
Ref: ai_suggestions.ticket_id > repair_tickets.id
Ref: quotations.ticket_id > repair_tickets.id
Ref: quotations.technician_id > technicians.id
Ref: repair_status_history.ticket_id > repair_tickets.id
Ref: repair_status_history.updated_by > users.id
Ref: warranties.ticket_id - repair_tickets.id
Ref: warranty_claims.original_ticket_id > repair_tickets.id
Ref: warranty_claims.customer_id > customers.id
Ref: warranty_claims.device_id > devices.id
Ref: warranty_claims.technician_id > technicians.id
Ref: notifications.user_id > users.id
Ref: notifications.ticket_id > repair_tickets.id
Ref: activity_logs.user_id > users.id
